# Hooks

./: CLAUDE.md  IDEAS.md  MIGRATION_ANALYSIS.md  README.md  TODOS.md  deploy.sh  deploy_hooks.py  pyproject.toml  secrets_template.json
claude-code/: README.md
claude-code/hooks/: command-tracker.py  npm-to-pnpm.py  rm-protection.sh  session-tracker.py  subagent-tracker.py  test-runner.py  todo-extractor.py
docs/: claude-code-hooks-research.md  comparison.md  migration-guide.md  session-analytics-guide.md  side-by-side-examples.md
opencode/: README.md  opencode.json.example  package.json  tsconfig.json
opencode/plugins/: auto-formatter.ts  command-tracker.ts  conventional-commit-validator.ts  grep-to-rg.ts  rm-protection.ts  session-tracker.ts  test-runner.ts  todo-extractor.ts  uv-enforcer.ts
src/hooks/: grep-to-rg.py
tests/: test_basic.py
