[project]
name = "hooks"
version = "0.1.0"
description = "A curated collection of hooks and tools for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.0.0",
    "ruff>=0.14.0",
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
